# chaos_anims

./: .gitignore  README.md  addtext.py  audiodiffuse.py  copyinterpmerge.py  dual_cutout.py  ebsynth.py  ffmpeg_wrapper.py  fractal_mask.py  fractalanim.py  get_sieve.py  ifstest.py  main.py  map_create.py  misc_proc.py  pyproject.toml  segment.py  sieve_gui.py  sieve_to_mask.py  signalsandbox.py  util.py  vid-pipeline.py  video_editor.py
chaos/: new.chaos
chaos/fullbodysprain/: atomic_1.chaos  atomic_2.chaos  atomic_3.chaos  atomic_4.chaos  boardwarpdrop.chaos  boardwarppre.chaos  boardwarpverse.chaos  boardwarpversealt.chaos  dancing_1.chaos  dancing_2.chaos  goodbyeporkpie.chaos  phylogenbreakdown1.chaos  phylogenbreakdown2.chaos  phylogenchorus1.chaos  phylogendrop1.chaos  phylogendrop2.chaos  phylogenendbw.chaos  phylogenintro.chaos  phylogentransition1.chaos  phylogentransition2.chaos  phylogentransition3.chaos  phylogenverse1.chaos  phylogenverse2.chaos  phylogenverse3.chaos  scream_1.chaos  scream_2.chaos  scream_3.chaos  scream_4.chaos  wayelm_1.chaos  wayelm_2.chaos  wayelm_3.chaos  wayelm_4.chaos  wayelm_5.chaos
chaos/scream/: 0.chaos  1.chaos  10.chaos  11.chaos  11_idea.chaos  12.chaos  1_mask.chaos  2.chaos  2_mask.chaos  3.chaos  3_mask.chaos  4.chaos  4_mask.chaos  5.chaos  5_mask.chaos  6.chaos  6_idea.chaos  6_mask.chaos  7.chaos  7_mask.chaos  8.chaos  9.chaos  910.chaos  910_mask.chaos  9_mask.chaos  bluefire.chaos  new.chaos  spinning_suns.chaos
chaos/test/: mbf.chaos  (+2 more)
parameters/: __init__.py  core.py  signals.py
projects/: deletemelater.py
(+33 files in other folders)
